terminar de arreglar favoritos

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
-    background-color: #0d6efd;
-    color: white;
+    background-color: #f8f9fa;
+    color: black;
     font-size: .6em;
     padding: 4px;
     text-align: center;
