--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,32 @@
+
+
+/* Importar la fuente Open Sans */
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+/* Aplicar la fuente a un elemento */
+body {
+  font-family: 'Open Sans', sans-serif;
+
+  font-weight: 100;
+}
+/* 
 body{
-    background-color: aqua;
+  
 font-family: sans-serif;
 font-weight: 100;
-}
+} */
 
 .imgProfile{
     width: 30vh;
     height: 30vh;
 }
 
+
+.contenedor{
+    padding: 5%;
+}
+
+.contenedor-registro {
+    padding-bottom: 2%;
+}
