--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,26 +7,24 @@ footer {
     bottom: 0;
     width: 100%;
     left: 0;
+    
+    
 }
 
-/* Footer.css */
 
-/* Estilo de los enlaces de iconos */
 .icon-link {
-  color: inherit; /* Hereda el color del padre (puede ser blanco o negro dependiendo del tema) */
-  text-decoration: none; /* Elimina la decoración del enlace */
-  font-size: 12px; /* Ajusta el tamaño de la fuente según sea necesario */
-  margin-right: 12px; /* Añade margen a la derecha para separar los iconos */
+  color: inherit; 
+  text-decoration: none; 
+  font-size: 12px; 
+  margin-right: 12px; 
 }
 
-/* Estilo del texto */
 .text-muted {
-  color: inherit; /* Hereda el color del padre (puede ser blanco o negro dependiendo del tema) */
+  color: inherit; 
 }
-/* Footer.css */
 
-/* Estilo del texto */
+
 h4 {
-  color: inherit; /* Hereda el color del padre (puede ser blanco o negro dependiendo del tema) */
+  color: inherit
 }
 
