--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -4,6 +4,7 @@
     text-align: center;
     margin-top: 1px;
     margin-bottom: 5px;
+     box-shadow: 0px 8px 2px rgba(19, 178, 27, 0.662);
 }
 
 .image-container {
